--- a/pokedex/package.json
+++ b/pokedex/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
+    "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
